--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,89 @@
+body {
+  font-family: 'Roboto Slab', serif;
+  --main-bg-color: coral;
+  --block-text-color:#222;--block-background-color:#fff;--block-accent-color:#00ae86;--block-shadow-color:#444
+}
+
+h1,
+h2,
+h3,
+h4,
+strong {
+  font-family: "Roboto Slab", serif;
+  font-weight: 600;
+  color: #3d3d3d;
+}
+
+input {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 1em;
+  box-sizing: border-box;
+  border: 0 !important;
+  font-weight: bold;
+  font-size: 1em;
+  outline: none !important;
+}
+
+.input-block {
+  display: inline-block;
+  width: 400px;
+  max-width: 70%;
+}
+
+.container {
+  margin: 1em;
+}
+
+#biggie {
+  margin: auto;
+  max-width: 800px;
+}
+
+.dp {
+  width: 20%;
+  max-width: 200px;
+  position: absolute;
+  bottom: -25%;
+  right: 2.5%;
+  border: solid 3px white;
+  border-radius: 2em;
+}
+
+.smol-dp {
+  width: 20%;
+  max-width: 200px;
+  position: absolute;
+  bottom: -25%;
+  right: 2.5%;
+  border: solid 3px white;
+  border-radius: 2em;
+}
+
+.header {
+  height: 150px;
+  position: relative;
+  margin: 0;
+}
+
+
+
+.wish {
+  border: solid 4px;
+  border-radius: 5px;
+  padding: 0.75em;
+  margin-bottom: 1em;
+}
+
+.title {
+  margin: 0;
+}
+
+.author {
+  margin-top: 0px;
+}
+
 .App {
   text-align: center;
 }
@@ -7,7 +93,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #50a2f7;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -20,3 +106,125 @@
 .App-link {
   color: #09d3ac;
 }
+
+
+.block {
+  display: block;
+  color: var(--block-text-color);
+  border: 3px solid var(--block-text-color);
+  border-radius: 3px;
+  padding: 4px 8px;
+  background: var(--block-background-color);
+  font-weight: 700;
+  cursor: pointer;
+  box-sizing: border-box;
+  position: relative;
+  top: -2px;
+  left: -2px;
+  transition: transform .2s;
+  margin: 8px 6px 10px;
+  z-index: 1;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+}
+
+.block:before {
+  content: "";
+  background: var(--block-background-color);
+  border: 3px solid var(--block-text-color);
+  border-radius: 3px;
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
+
+.block:after {
+  content: "";
+  display: block;
+  background: var(--block-shadow-color);
+  border: 3px solid var(--block-text-color);
+  border-radius: 3px;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  right: 0;
+  z-index: -2;
+  transition: transform .2s;
+}
+
+.smol-header {
+  /* height: 75px; */
+  position: relative;
+  margin: 0;
+}
+
+.smol-about {
+  margin-top: 1em;
+}
+
+.block.accent, .block.accent:before {
+  background: var(--block-accent-color);
+}
+
+.playlist-title {
+  font-size: 16px;
+  font-weight: 100;
+  /* padding : 10px; */
+  text-align: left;
+}
+
+.playlist-container {
+  display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 80%;
+    margin: auto;
+}
+
+.track-container {
+  width : "fit-content";
+  
+  margin : auto;
+}
+
+.highlite:after {
+  height: 60%;
+  width: 90%;
+  content: "";
+  display: block;
+  background-color: #ffb8de;
+  position: absolute;
+  top: 36%;
+  left: 10%;
+  z-index: -1;
+  transform: skewX(-20deg)
+}
+
+.p-10 {
+  padding: 10px !important;
+}
+
+.track {
+  display: block;
+  flex-direction: column;
+  width: fit-content;
+  margin: auto;
+}
+
+.nav {
+  font-size: 16px;
+}
+
+.accent
+
+
+/* blocks.css */
+
+body{--block-text-color:#222;--block-background-color:#fff;--block-accent-color:#00ae86;--block-shadow-color:#444}.block{display:block;color: #222;border: 3px solid var(--block-text-color);border-radius:3px;padding:4px 8px;background:var(--block-background-color);font-weight:700;cursor:pointer;box-sizing:border-box;position:relative;top:-2px;left:-2px;transition:transform .2s;margin:8px 6px 10px;z-index:1;user-select:none;-webkit-user-select:none;-moz-user-select:none;}.block.wrapper,.block.wrapper.inline{display:inline-block;padding:0}.block.wrapper>*{margin:0}.block:before{content:"";background:var(--block-background-color);border:3px solid var(--block-text-color);border-radius:3px;position:absolute;top:-3px;left:-3px;height:100%;width:100%;z-index:-1;}.block:focus,.block:hover{transform:translate(2px,2px)}.block:after{content:"";display:block;background:var(--block-shadow-color);border:3px solid var(--block-text-color);border-radius:3px;height:100%;width:100%;position:absolute;top:3px;left:3px;right:0;z-index:-2;transition:transform .2s;}.block:focus:after,.block:hover:after{transform:translate(-2px,-3px)}.block:active{color:var(--block-text-color);transform:translate(3px,3px)}.block:active:after{transform:translate(-4px,-4px)}.block:focus{outline:none}.block.fixed:active,.block.fixed:active:after,.block.fixed:active:before,.block.fixed:focus,.block.fixed:focus:after,.block.fixed:focus:before,.block.fixed:hover,.block.fixed:hover:after,.block.fixed:hover:before{transform:none}.block.accent{color:var(--block-background-color)}.block.accent,.block.accent:before{background:var(--block-accent-color)}.block.inline{display:inline-block;font-size:.75em;padding:0 6px;margin:3px 2px 1px 4px}.block.inline:after{top:-1px;left:-1px}.block.inline:focus,.block.inline:hover{transform:translate(1px,1px)}.block.inline:focus:after,.block.inline:hover:after{transform:translate(-1px,-1px)}.block.inline:active{transform:translate(2px,2px)}
+/*# sourceMappingURL=blocks.min.css.map */
