--- a/src/App.css
+++ b/src/App.css
@@ -183,6 +183,7 @@ input {
   display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     width: 80%;
     margin: auto;
 }
@@ -190,7 +191,10 @@ input {
 .track-container {
   width : "fit-content";
   
-  margin : auto;
+  margin : auto;  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .highlite:after {
@@ -213,7 +217,8 @@ input {
 .track {
   display: block;
   flex-direction: column;
-  width: fit-content;
+  height: 215px;
+  width: 215px;
   margin: auto;
 }
 
