--- a/src/App.css
+++ b/src/App.css
@@ -95,9 +95,9 @@ input {
 .App-header {
   background-color: #50a2f7;
   min-height: 100vh;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
